# claude-video-toolkit

./: .gitignore  .gitmodules  CLAUDE.md  README.md  pyproject.toml
.claude/skills/manim-video/: TOOLKIT_INTEGRATION.md
.github/workflows/: tests.yml
projects/neural_svg/: CLAUDE.md  video.py
tests/: __init__.py  conftest.py  test_cache.py  test_cli.py  test_composition.py  test_config.py  test_engines.py  test_external.py  test_overlays.py  test_project.py  test_remotion.py  test_remotion_integration.py  test_segments.py  test_sources.py  test_utils.py
video_toolkit/: __init__.py  __main__.py  cli.py  project.py
video_toolkit/cache/: __init__.py  base.py  combined.py  generated.py  manager.py  segments.py  tts.py
video_toolkit/composition/: __init__.py  audio_sync.py  compositor.py  concatenator.py
video_toolkit/config/: __init__.py  project.py  resolution.py  styles.py
video_toolkit/examples/: basic_example.py
video_toolkit/overlays/: __init__.py  base.py  subtitle.py  title_bar.py  watermark.py
video_toolkit/remotion/: __init__.py  config.py  exceptions.py  generator.py  renderer.py  segments.py  transitions.py
video_toolkit/remotion/_node/: package-lock.json  package.json  render.mjs  tsconfig.json
video_toolkit/remotion/_node/src/: index.tsx
video_toolkit/sources/: __init__.py  base.py
video_toolkit/sources/generators/: __init__.py  base.py  function.py  manim.py  script.py
video_toolkit/tts_engines/: __init__.py  base.py  elevenlabs.py  qwen3.py  soprano.py
video_toolkit/utils/: __init__.py  text.py
(+8 files in other folders)
