[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-video-toolkit"
version = "0.1.0"
description = "A modular video generation toolkit for creating narrated presentation videos"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "moviepy>=2.0.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
soprano = [
    "soprano-tts",
]
elevenlabs = [
    "elevenlabs",
]
manim = [
    "manim>=0.18.0",
]
qwen3 = [
    "qwen-tts>=0.0.5",
]
all-external = [
    "manim>=0.18.0",
    "soprano-tts",
    "qwen-tts>=0.0.5",
]

[project.scripts]
video-toolkit = "video_toolkit.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["video_toolkit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests (require real files/rendering)",
]
